ignore a few things due to fucky isolated-vm ts definition

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "typescript.tsdk": "node_modules/typescript/lib",
-    "javascript.format.enable": false
+    "javascript.format.enable": false,
+    "deno.enable": false
 }
