--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@fly/core",
-  "version": "0.55.7",
+  "version": "0.55.8-pre.0",
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
