--- a/lerna.json
+++ b/lerna.json
@@ -3,7 +3,7 @@
     "packages/*",
     "tests/*"
   ],
-  "version": "0.55.8-pre.1",
+  "version": "0.56.0",
   "npmClient": "yarn",
   "useWorkspaces": true,
   "command": {
