--- a/packages/container-server/package.json
+++ b/packages/container-server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@fly/container-server",
-  "version": "0.55.8-pre.0",
+  "version": "0.56.0",
   "description": "fly container server",
   "homepage": "https://github.com/superfly/fly#readme",
   "license": "Apache-2.0",
@@ -27,7 +27,7 @@
     "url": "https://github.com/superfly/fly/issues"
   },
   "dependencies": {
-    "@fly/core": "0.55.8-pre.0",
+    "@fly/core": "0.56.0",
     "@fly/v8env": "0.55.2",
     "js-yaml": "^3.13.0",
     "mksuid": "0.0.3",
