rename cli binary to flyjs

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -15,7 +15,7 @@
     "/oclif.manifest.json"
   ],
   "bin": {
-    "fly": "./bin/run"
+    "flyjs": "./bin/run"
   },
   "repository": {
     "type": "git",
