rename flyjs for oclif

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -69,7 +69,7 @@
   "oclif": {
     "description": "Fly edge application runtime",
     "commands": "./lib/commands",
-    "bin": "fly",
+    "bin": "flyjs",
     "plugins": [
       "@oclif/plugin-help",
       "@oclif/plugin-warn-if-update-available"
